fix overflow of the more layer

--- a/public/index.css
+++ b/public/index.css
@@ -84,6 +84,7 @@ body {
     height: 100%;
     text-align: center;
     background-color: rgba(0, 0, 0, .5);
+    overflow: auto;
     backdrop-filter: blur(5px);
     z-index: 666;
 }
